@@ -14,6 +14,7 @@
 	* Update version to 2.4
 	* Resolves #45684: Add autoloading
 	* Follow up to #45684: Add autoloading
+	* Fixed issue #45686: Remove reference to static_info_tables_markets
 
 2013-02-19  Stanislas Rolland  <typo3@sjbr.ca>
 
